Agregue la seccion about me y mail, ademas de corregir un poco el responsive

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Lautaro Jaime Portfolio</title>
 
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
   </head>
